# cambridge

./: .gitignore  pyproject.toml
cambridge/: console.py  errors.py  log.py
cambridge/api/: __init__.py  __main__.py  console.py  db.py  exceptions.py  linearize.py
cambridge/api/cambridge/: parser.py  requester.py
cambridge/dicts/: cambridge.py  webster.py
