[tool.poetry]
name = "cambridge_api"
version = "0.1.0"
description = "a cambridge dictionary async api"
authors = ["finpluto <finpluto@hotmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
rich = "^12.5.1"
beautifulsoup4 = "^4.11.1"
aiosqlite = "^0.17.0"
aiohttp = "^3.8.1"
user-agent = "^0.1.10"
aiofiles = "^0.8.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
autopep8 = "^1.7.0"
ipykernel = "^6.15.1"
ipython = "^8.4.0"
pylint = "^2.14.5"

[[tool.poetry.source]]
name = "custom-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
